--- a/src/app/components/limited-type/limited-type.component.css
+++ b/src/app/components/limited-type/limited-type.component.css
@@ -21,6 +21,10 @@
     border-radius: 5px;
     padding: 16px;
 }
+.comment-container {
+    background-color: #9a0707;
+    margin-bottom: 2rem;
+}
 .at-limit {
     background-color: #A71E2A;
 }
