--- a/src/app/components/shop/shop.component.css
+++ b/src/app/components/shop/shop.component.css
@@ -57,3 +57,14 @@
     justify-content: center;
     margin: 5%;
 }
+.mat-spinner {
+    position: fixed;
+    height: 2em;
+    width: 2em;
+    overflow: visible;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
