--- a/src/app/components/update-modal/update-modal.component.html
+++ b/src/app/components/update-modal/update-modal.component.html
@@ -69,7 +69,7 @@
   </div>
   <div>  
     <mat-form-field>
-      <mat-label>Number of children between 4 and 18 years old</mat-label>
+      <mat-label>Number of children under 17 years old</mat-label>
       <mat-select matInput formControlName="schoolChildren" [value]="family.schoolChildren">
         <mat-option [value]=0>0</mat-option>
         <mat-option [value]=1>1</mat-option>
@@ -77,17 +77,28 @@
         <mat-option [value]=3>3</mat-option>
         <mat-option [value]=4>4</mat-option>
         <mat-option [value]=5>5</mat-option>
-        <mat-option [value]=6>6+</mat-option>
+        <mat-option [value]=6>6</mat-option>
+        <mat-option [value]=7>7</mat-option>
+        <mat-option [value]=8>8</mat-option>
+        <mat-option [value]=9>9+</mat-option>
       </mat-select>
       <mat-error *ngIf="householdForm.get('schoolChildren').hasError('required')">{{requiredError}}</mat-error>
     </mat-form-field>
   </div>
   <div>  
     <mat-form-field>
-      <mat-label>Any children 3 or younger?</mat-label>
+      <mat-label>Number of children under 3 years old</mat-label>
       <mat-select matInput formControlName="infants" [value]="family.infants">
-        <mat-option [value]=true>Yes</mat-option>
-        <mat-option [value]=false>No</mat-option>
+        <mat-option [value]=0>0</mat-option>
+        <mat-option [value]=1>1</mat-option>
+        <mat-option [value]=2>2</mat-option>
+        <mat-option [value]=3>3</mat-option>
+        <mat-option [value]=4>4</mat-option>
+        <mat-option [value]=5>5</mat-option>
+        <mat-option [value]=6>6</mat-option>
+        <mat-option [value]=7>7</mat-option>
+        <mat-option [value]=8>8</mat-option>
+        <mat-option [value]=9>9+</mat-option>
       </mat-select>
       <mat-error *ngIf="householdForm.get('infants').hasError('required')">{{requiredError}}</mat-error>  
     </mat-form-field>  
